removing unwanted menus

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <script src="jquery.js"></script>
   </head>
 
-  <body style="background-color: rgba(0,0,0,0.4)">
+  <body style="">
 
     <div class="container">
 
